--- a/up_document/i18n/zh_CN.po
+++ b/up_document/i18n/zh_CN.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0-20131022-232438\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-22 07:07+0000\n"
-"PO-Revision-Date: 2014-04-22 07:07+0000\n"
+"POT-Creation-Date: 2014-04-22 07:10+0000\n"
+"PO-Revision-Date: 2014-04-22 07:10+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,9 +16,19 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: up_document
+#: view:document.directory:0
+msgid "These groups, however, will automatic add to children directories everytime,Please check the groups status everytime you change the parent directories!"
+msgstr "下列的权限配置,在创建子文件夹时会默认添加到子文件夹的权限配置中,如果你变更了上级文件夹的权限,请检查下属文件夹的权限是否符合你的需求配置."
+
+#. module: up_document
 #: field:document.directory.access,group_id:0
 msgid "Group"
 msgstr "组"
+
+#. module: up_document
+#: view:ir.attachment.download.wizard:0
+msgid "Export Complete"
+msgstr "导出完成"
 
 #. module: up_document
 #: view:document.directory.action.wizard:0
@@ -26,10 +36,14 @@ msgid "Create"
 msgstr "创建"
 
 #. module: up_document
-#: field:document.directory.access,is_downloadable:0
-#: field:ir.attachment,is_downloadable:0
-msgid "Is Downloadable"
-msgstr "Is Downloadable"
+#: model:ir.model,name:up_document.model_document_directory_action_wizard
+msgid "document.directory.action.wizard"
+msgstr "文件夹"
+
+#. module: up_document
+#: field:ir.attachment.application,apply_user_id:0
+msgid "Apply User"
+msgstr "申请人"
 
 #. module: up_document
 #: view:document.directory.access:0
@@ -37,9 +51,24 @@ msgid "Access"
 msgstr "权限"
 
 #. module: up_document
-#: model:ir.model,name:up_document.model_document_directory_access
-msgid "document.directory.access"
-msgstr "文件夹权限"
+#: field:ir.attachment.application,state:0
+msgid "State"
+msgstr "状态"
+
+#. module: up_document
+#: field:ir.attachment.application,attachment_id:0
+msgid "Attachment"
+msgstr "文档"
+
+#. module: up_document
+#: model:ir.actions.act_window,name:up_document.action_public_document_directory_tree
+msgid "Public Directories Structure"
+msgstr "公共文件夹结构"
+
+#. module: up_document
+#: model:ir.model,name:up_document.model_ir_attachment_application
+msgid "ir.attachment.application"
+msgstr "文档下载审批"
 
 #. module: up_document
 #: view:document.directory:0
@@ -47,9 +76,24 @@ msgid "Security"
 msgstr "安全设定"
 
 #. module: up_document
-#: model:ir.ui.menu,name:up_document.menu_document_directories_tree
-msgid "Public Directory Structure"
-msgstr "公共文件夹管理"
+#: view:ir.attachment:0
+msgid "Download Application"
+msgstr "下载审批"
+
+#. module: up_document
+#: field:document.directory.access,is_need_approval:0
+msgid "Is Need Approval"
+msgstr "需要下载审批"
+
+#. module: up_document
+#: field:ir.attachment.application,approve_date:0
+msgid "Approve Date"
+msgstr "审批时间"
+
+#. module: up_document
+#: model:ir.actions.act_window,name:up_document.action_attachment_download_manage
+msgid "Attachment Download Application Management"
+msgstr "文档下载申请管理"
 
 #. module: up_document
 #: field:document.directory.action.wizard,name:0
@@ -67,15 +111,15 @@ msgid "Create Action"
 msgstr "创建动作"
 
 #. module: up_document
-#: view:ir.attachment.download.wizard:0
-msgid "file encoding, please be sure to view and edit\n"
-"                           using supported software."
-msgstr "文件压缩,请确保使用正确的软件打开."
+#: view:ir.attachment:0
+msgid "Split inventory lines"
+msgstr "Split inventory lines"
 
 #. module: up_document
-#: view:document.directory:0
-msgid "Delete Action"
-msgstr "删除动作"
+#: view:ir.attachment.application:0
+#: selection:ir.attachment.application,state:0
+msgid "Approve"
+msgstr "批准"
 
 #. module: up_document
 #: model:ir.actions.act_window,name:up_document.acttion_download_attachments_wiz
@@ -99,6 +143,11 @@ msgid "Public Document"
 msgstr "公共文件"
 
 #. module: up_document
+#: field:ir.attachment,application_ids:0
+msgid "Applications"
+msgstr "申请"
+
+#. module: up_document
 #: field:document.directory,related_action_id:0
 msgid "Related Menu Action"
 msgstr "相关菜单动作"
@@ -109,14 +158,25 @@ msgid "choose"
 msgstr "选择"
 
 #. module: up_document
-#: field:document.directory.access,directory_id:0
-msgid "Related Directory ID"
-msgstr "相关文件夹"
+#: view:ir.attachment.download.wizard:0
+msgid "zip"
+msgstr "zip"
+
+#. module: up_document
+#: model:ir.actions.act_window,name:up_document.action_attachment_download_my
+#: model:ir.ui.menu,name:up_document.menu_attachment_download_my
+msgid "My Attachment Download Application"
+msgstr "我的文档下载申请"
 
 #. module: up_document
 #: view:document.directory:0
 msgid "onchange_parent_id(parent_id)"
 msgstr "onchange_parent_id(parent_id)"
+
+#. module: up_document
+#: model:ir.ui.menu,name:up_document.menu_document_directories_tree
+msgid "Public Directory Structure"
+msgstr "公共文件夹结构"
 
 #. module: up_document
 #: model:ir.actions.act_window,name:up_document.action_document_direct_action_wiz
@@ -129,9 +189,19 @@ msgid "Here is the exported file:"
 msgstr "这是已经导出的文件:"
 
 #. module: up_document
+#: view:ir.attachment:0
+msgid "Indexed Content"
+msgstr "内容索引"
+
+#. module: up_document
+#: view:ir.attachment.application:0
+msgid "Attachment Download Management"
+msgstr "文档下载管理"
+
+#. module: up_document
 #: view:ir.attachment.download.wizard:0
-msgid "zip"
-msgstr "zip"
+msgid "This file was generated using the universal"
+msgstr "此文件使用通用的 GBK 文件编码"
 
 #. module: up_document
 #: view:document.directory.action.wizard:0
@@ -149,15 +219,19 @@ msgid "Directories"
 msgstr "目录"
 
 #. module: up_document
-#: view:ir.attachment.download.wizard:0
-msgid "This file was generated using the universal"
-msgstr "此文件使用通用的 GBK 文件编码"
+#: field:document.directory.access,directory_id:0
+msgid "Related Directory ID"
+msgstr "相关文件夹"
 
 #. module: up_document
-#: view:document.directory.action.wizard:0
+#: field:document.directory.access,code:0
+msgid "Domain"
+msgstr "Domain"
+
+#. module: up_document
 #: view:ir.attachment.download.wizard:0
-msgid "Cancel"
-msgstr "取消"
+msgid "Download"
+msgstr "下载"
 
 #. module: up_document
 #: model:ir.ui.menu,name:up_document.menu_document_public_config
@@ -165,14 +239,19 @@ msgid "Public Document Config"
 msgstr "公共文件管理"
 
 #. module: up_document
-#: model:ir.ui.menu,name:up_document.menu_document_dir_public_menagement
-msgid "Public Directory Management"
-msgstr "公共文件夹结构"
+#: model:res.groups,name:up_document.group_attachment_download_manager
+msgid "Attachment Download Manager"
+msgstr "文档下载申请管理员"
 
 #. module: up_document
-#: model:ir.model,name:up_document.model_document_directory_action_wizard
-msgid "document.directory.action.wizard"
-msgstr "文件夹"
+#: model:ir.ui.menu,name:up_document.menu_document_dir_public_menagement
+msgid "Public Directory Management"
+msgstr "公共文件夹管理"
+
+#. module: up_document
+#: view:ir.attachment:0
+msgid "Sync Name"
+msgstr "同步文件名"
 
 #. module: up_document
 #: model:ir.model,name:up_document.model_document_directory
@@ -180,9 +259,9 @@ msgid "Directory"
 msgstr "目录"
 
 #. module: up_document
-#: model:ir.actions.act_window,name:up_document.action_public_document_directory_tree
-msgid "Public Directories Structure"
-msgstr "公共文件夹结构"
+#: model:ir.ui.menu,name:up_document.menu_attachment_download_root
+msgid "Attachment Download Manage"
+msgstr "文档下载申请"
 
 #. module: up_document
 #: view:ir.attachment.download.wizard:0
@@ -190,9 +269,15 @@ msgid "If some of the attachments is too large it may cost lot of time, please D
 msgstr "如果以下的文件中存在较大的文件(红色),请返回上一个菜单单独下载他们."
 
 #. module: up_document
-#: view:ir.attachment.download.wizard:0
-msgid "Export Complete"
-msgstr "导出完成"
+#: field:document.directory.access,is_downloadable:0
+#: field:ir.attachment,is_downloadable:0
+msgid "Is Downloadable"
+msgstr "可下载"
+
+#. module: up_document
+#: view:document.directory:0
+msgid "Delete Action"
+msgstr "删除动作"
 
 #. module: up_document
 #: view:document.directory:0
@@ -202,12 +287,22 @@ msgstr "只有这些用户组的成员才有权限访问该目录和其中的文
 #. module: up_document
 #: sql_constraint:ir.attachment:0
 msgid "The file name in directory must be unique !"
-msgstr "The file name in directory must be unique !"
+msgstr "同一个目录下的文件不得重名 !"
 
 #. module: up_document
-#: field:document.directory.access,code:0
-msgid "Domain"
-msgstr "Domain"
+#: field:ir.attachment.application,expire_date:0
+msgid "Expire Date"
+msgstr "过期时间"
+
+#. module: up_document
+#: field:ir.attachment.application,apply_date:0
+msgid "Apply Date"
+msgstr "申请时间"
+
+#. module: up_document
+#: field:document.directory.access,perm_create_unlink:0
+msgid "Sub Directory Create / Write / Unlink Access"
+msgstr "文件夹创建/修改/删除权限"
 
 #. module: up_document
 #: field:ir.attachment.download.wizard,attachment_ids:0
@@ -222,17 +317,22 @@ msgstr "公共文件夹配置"
 #. module: up_document
 #: field:document.directory,index:0
 msgid "Sequence"
-msgstr "Sequence"
+msgstr "序列"
 
 #. module: up_document
-#: field:ir.attachment.download.wizard,name:0
-msgid "File Name"
-msgstr "文件名"
+#: field:ir.attachment.application,is_expired:0
+msgid "Is expired"
+msgstr "是否过期"
+
+#. module: up_document
+#: model:ir.ui.menu,name:up_document.menu_attachment_download_manage
+msgid "Attachment Download Application Manage"
+msgstr "文档下载申请管理"
 
 #. module: up_document
 #: view:ir.attachment:0
-msgid "Sync Name"
-msgstr "同步文件名"
+msgid "Are you sure you want apply to download this document? After the application please check my document application menu for detail."
+msgstr "你确定申请下载这个文件？  查询下载申请情况请前往‘我的下载申请’菜单."
 
 #. module: up_document
 #: field:document.directory.access,perm_read:0
@@ -240,9 +340,16 @@ msgid "Directory / Sub File Read Access"
 msgstr "文件夹/下属文件访问权限"
 
 #. module: up_document
-#: field:document.directory.access,perm_create_unlink:0
-msgid "Sub Directory Create / Write / Unlink Access"
-msgstr "文件夹创建/修改/删除权限"
+#: view:ir.attachment.application:0
+#: selection:ir.attachment.application,state:0
+msgid "Disapprove"
+msgstr "拒绝"
+
+#. module: up_document
+#: view:document.directory.action.wizard:0
+#: view:ir.attachment.download.wizard:0
+msgid "or"
+msgstr "或"
 
 #. module: up_document
 #: field:document.directory.access,perm_write:0
@@ -250,14 +357,20 @@ msgid "Sub File Write / Modify Access"
 msgstr "下属文件/添加/修改/删除权限"
 
 #. module: up_document
+#: view:ir.attachment.download.wizard:0
+msgid "file encoding, please be sure to view and edit\n"
+"                           using supported software."
+msgstr "文件压缩,请确保使用正确的软件打开."
+
+#. module: up_document
 #: view:document.directory:0
 msgid "Public Directories"
 msgstr "公共文件夹"
 
 #. module: up_document
-#: view:document.directory:0
-msgid "These groups, however, will automatic add to children directories everytime,Please check the groups status everytime you change the parent directories!"
-msgstr "下列的权限配置,在创建子文件夹时会默认添加到子文件夹的权限配置中,如果你变更了上级文件夹的权限,请检查下属文件夹的权限是否符合你的需求配置."
+#: field:ir.attachment.application,approve_user_id:0
+msgid "Approver User"
+msgstr "审批人"
 
 #. module: up_document
 #: field:ir.attachment.download.wizard,data:0
@@ -270,9 +383,10 @@ msgid "unknown"
 msgstr "unknown"
 
 #. module: up_document
+#: view:document.directory.action.wizard:0
 #: view:ir.attachment.download.wizard:0
-msgid "Download"
-msgstr "下载"
+msgid "Cancel"
+msgstr "取消"
 
 #. module: up_document
 #: view:ir.attachment.download.wizard:0
@@ -285,8 +399,12 @@ msgid "ir.attachment"
 msgstr "ir.attachment"
 
 #. module: up_document
-#: view:document.directory.action.wizard:0
-#: view:ir.attachment.download.wizard:0
-msgid "or"
-msgstr "或"
+#: field:ir.attachment.download.wizard,name:0
+msgid "File Name"
+msgstr "文件名"
+
+#. module: up_document
+#: model:ir.model,name:up_document.model_document_directory_access
+msgid "document.directory.access"
+msgstr "文件夹权限"
 
